[tool.poetry]
name = "an-tools"
version = "0.1.0"
description = ""
authors = ["Simon Reeves <simonreeves@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "an_tools"}]

[tool.poetry.dependencies]
python = "^3.7"
qt-py = "^1.3.8"
requests = "^2.28.2"
deprecated = "^1.2.13"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
structure_config = ["*.ini"]